--- a/styles.css
+++ b/styles.css
@@ -140,7 +140,26 @@ header {
 .highlight {
     color: var(--verde); /* Color de las palabras dinámicas */
 }
+/* Iconos  */
+.iconos-sociales {
+    position: absolute;
+    top: 50%;
+    right: 20px;
+    transform: translateY(-50%);
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
 
+  .iconos-sociales a {
+    border-radius: 50%;
+    padding: 10px;
+    text-align: center;
+    transition: all 0.3s ease-in-out;
+  }
+  .iconos-sociales a:hover {
+    background-color: white; /* Fondo verde claro al pasar el mouse */
+  }
 /* Botón */
 
 .button-container {
@@ -171,6 +190,11 @@ header {
 
 .button:hover {
     background-color: gray;
+}
+
+.project-info .button {
+    margin-top: 20px !important;
+     display: inline-block;
 }
 
 
@@ -276,6 +300,7 @@ header {
     align-items: center;
     min-height: 100vh;
     flex-direction: column;
+    padding: 16px;
   }
   
   .project {
